fixed the main container in landing getting shifted to the right in Firefox. Fixed form fields not getting cleared when loaded

--- a/srcs/frontend/webapp/loyelto-web/src/index.css
+++ b/srcs/frontend/webapp/loyelto-web/src/index.css
@@ -23,17 +23,16 @@ a:hover {
 }
   */
 body{
- display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  place-items: center;
+ 
 }
 html, body, #root {
+
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
- 
+/* min-width: 100vw */
+
   /* align-items: center; */
   /* min-width: 320px; */
   
